included extra scenario

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Enter FruitPal;</title>
+    <title>Enter FruitPal</title>
 </head>
 <body>
 Enter quote information
     <form action="/commodity" method="post">
         <table border="1" cellpadding="7" cellspacing="7">
-        <tr><td>    		Commodity: <input name ="fruit" type="text" /><br /></td></tr>
+        <tr><td>Commodity: <input name ="fruit" type="text" /><br /></td></tr>
         <tr><td>Quantity: <input name="quantity" type="text" /> <br /></td></tr>
         <tr><td>Quote: <input name="quote" type="text" /> <br /></td></tr>
      </table> 
